--- a/hci_project/pubspec.yaml
+++ b/hci_project/pubspec.yaml
@@ -1,6 +1,5 @@
 name: hci_project
 description: hci_project
-
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -28,6 +27,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  video_player: ^2.1.1
+#  video_player_web: 0.1.1+1
+#  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - video/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
