--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -1,5 +1,6 @@
-name: hci_project
-description: hci_project
+name: flutter_app
+description: A new Flutter application.
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -17,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,14 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  video_player: ^2.1.1
-#  video_player_web: 0.1.1+1
-#  youtube_player_flutter: ^8.0.0
-  stop_watch_timer: ^1.2.0+1
-  chewie: ^1.2.0
-  http_client: ^1.5.1
-  shared_preferences: ^2.0.6
-  file_saver: ^0.0.6
 
 dev_dependencies:
   flutter_test:
@@ -52,10 +45,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-     - video/
-     - assets/image1.jpg
-     - assets/image2.png
+  # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
